--- a/Credit_Card_Fraud_Detection.ipynb
+++ b/Credit_Card_Fraud_Detection.ipynb
@@ -4539,9 +4539,7 @@
         "# Conclusion\n",
         "A significant performance improvement across all models was observed after oversampling. However, this may suggest potential overfitting as the model might be memorizing specific patterns in the data that might not generalize well to unseen data.\n",
         "\n",
-        "By analyzing the performance under undersampling, which reflects a more realistic class distribution, we found that Logistic Regression provides a good balance between identifying fraudulent transactions and minimizing false positives. It also offers the advantage of being interpretable, allowing us to understand the factors influencing its predictions.\n",
-        "\n",
-        "In conclusion, the best model choice depends on the specific project requirements. If interpretability is less critical and overfitting is a concern, one might explore techniques to address overfitting in Random Forest models."
+        "By analyzing the performance under undersampling, which reflects a more realistic class distribution, we found that Logistic Regression provides a good balance between identifying fraudulent transactions and minimizing false positives. It also offers the advantage of being interpretable, allowing us to understand the factors influencing its predictions.\n"
       ],
       "metadata": {
         "id": "_CLHPemSpkEv"
